# ollamaMQ

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  demo-linkedin.tape  demo-test.tape  demo.tape  docker-compose.yml  docker-entrypoint.sh  test_dispatcher.sh
src/: dispatcher.rs  main.rs  tui.rs
