[package]
name = "ollamaMQ"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
